--- a/src/components/tree-viewer.module.scss
+++ b/src/components/tree-viewer.module.scss
@@ -5,15 +5,15 @@
 .list-container {
   margin: 0;
   padding: 0;
-  // margin-top: 10px;
   list-style: none;
   overflow-x: auto;
 }
 
 .content {
   width: 638px;
-  // padding: 24px 46px;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+  flex-direction: column;
 }
